--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,16 @@ charset-normalizer==3.3.2
 idna==3.6
 requests==2.31.0
 urllib3==2.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.6
+Pillow==10.1.0
+requests==2.31.0
+ttkthemes==3.2.2
+urllib3==2.1.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.6
+Pillow==10.1.0
+requests==2.31.0
+urllib3==2.1.0
